a fix (bug #10303: Misleading Last_query_cost value).

sql/sql_select.cc:
  a fix (bug #10303: Misleading Last_query_cost value).
  reset last_query_cost in the very beginning.